service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  selector:
    app: deployment1
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 8000
  type: NodePort
